[package]
name = "tits"
version = "0.1.0"
edition = "2021"
license-file = "license.md"
keywords = ["tits", "download", "internet", "async"]
categories = ["filesystem"]
description = "Teriffic Internet Transfer System"
repository = "https://github.com/jdadonut/tits"
homepage = "https://github.com/jdadonut/tits"
readme = "readme.md"



[dependencies]

